# vanilla-enhanced

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bass.lib  config.cmd
.github/workflows/: build.yml
PopcapTools/: DecompDebugKeys.txt
src/: ConstEnums.h  GameConstants.h  LawnApp.cpp  LawnApp.h  Resources.cpp  Resources.h  main.cpp
src/ImageLib/: CMakeLists.txt  ImageLib.cpp  ImageLib.h
src/Lawn/: Achievements.cpp  Achievements.h  Board.cpp  Board.h  BoardInclude.h  Challenge.cpp  Challenge.h  Coin.cpp  Coin.h  CursorObject.cpp  CursorObject.h  CutScene.cpp  Cutscene.h  GameObject.cpp  GameObject.h  GridItem.cpp  GridItem.h  LawnCommon.cpp  LawnCommon.h  LawnMower.cpp  LawnMower.h  MessageWidget.cpp  MessageWidget.h  Plant.cpp  Plant.h  Projectile.cpp  Projectile.h  SeedPacket.cpp  SeedPacket.h  ToolTipWidget.cpp  ToolTipWidget.h  ZenGarden.cpp  ZenGarden.h  Zombie.cpp  Zombie.h
src/Lawn/System/: DataSync.cpp  DataSync.h  Music.cpp  Music.h  PlayerInfo.cpp  PlayerInfo.h  PoolEffect.cpp  PoolEffect.h  PopDRMComm.cpp  PopDRMComm.h  ProfileMgr.cpp  ProfileMgr.h  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp  SaveGame.h  TypingCheck.cpp  TypingCheck.h
src/Lawn/Widget/: AchievementScreen.cpp  AchievementScreen.h  AlmanacDialog.cpp  AlmanacDialog.h  AwardScreen.cpp  AwardScreen.h  ChallengePagesDialog.cpp  ChallengePagesDialog.h  ChallengeScreen.cpp  ChallengeScreen.h  CheatDialog.cpp  CheatDialog.h  ContinueDialog.cpp  ContinueDialog.h  CreditScreen.cpp  CreditScreen.h  GameButton.cpp  GameButton.h  GameSelector.cpp  GameSelector.h  LawnDialog.cpp  LawnDialog.h  MiniCreditsScreen.cpp  MiniCreditsScreen.h  NewOptionsDialog.cpp  NewOptionsDialog.h  NewUserDialog.cpp  NewUserDialog.h  QuickPlayScreen.cpp  QuickPlayScreen.h  SeedChooserScreen.cpp  SeedChooserScreen.h  StoreScreen.cpp  StoreScreen.h  TitleScreen.cpp  TitleScreen.h  UserDialog.cpp  UserDialog.h
src/PakLib/: CMakeLists.txt  PakInterface.cpp  PakInterface.h
src/Sexy.TodLib/: Attachment.cpp  Attachment.h  DataArray.h  Definition.cpp  Definition.h  EffectSystem.cpp  EffectSystem.h  FilterEffect.cpp  FilterEffect.h  ReanimAtlas.cpp  ReanimAtlas.h  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodCommon.h  TodDebug.cpp  TodDebug.h  TodFoley.cpp  TodFoley.h  TodList.cpp  TodList.h  TodParticle.cpp  TodParticle.h  TodStringFile.cpp  TodStringFile.h  Trail.cpp  Trail.h
src/SexyAppFramework/: AutoCrit.h  BassLoader.cpp  BassLoader.h  BassMusicInterface.cpp  BassMusicInterface.h  Buffer.cpp  Buffer.h  ButtonListener.h  ButtonWidget.cpp  ButtonWidget.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  CheckboxListener.h  Color.cpp  Color.h  Common.cpp  Common.h  CritSect.cpp  CritSect.h  CursorWidget.cpp  CursorWidget.h  D3D8Helper.cpp  D3D8Helper.h  D3DInterface.cpp  D3DInterface.h  D3DTester.cpp  D3DTester.h  DDImage.cpp  DDImage.h  DDInterface.cpp  DDInterface.h  DSoundInstance.cpp  DSoundInstance.h  DSoundManager.cpp  DSoundManager.h  Debug.cpp  Debug.h  DescParser.cpp  Dialog.cpp  (+110 more)
x64/: README.txt  bass.lib
